--- a/Matrix_Algebra-Puzzle.Rmd
+++ b/Matrix_Algebra-Puzzle.Rmd
@@ -38,71 +38,6 @@ H <- as.matrix(array(rnorm(n*p), c(n,p)))
 
 ```
 
-## Hints
-
-### Hint 1
-
-When you are asked to do something to the matrix M, make sure you save the updated matrix, not just perform the calculation and print it out. **At each step, the matrix M should retain its original dimensions - this is a good way to check your progress.**  For example, let's do step 1 together:
-
-1. Matrix-multiply M by A.
-
-```{r, eval = FALSE}
-# Correct step:
-M <- M %*% A
-
-# This will perform the calculation, but not update M
-# M %*% A
-
-# This will result in an error because the dimensions do not match
-#  A %*% M
-```
-
-### Hint 2
-
-When you are doing matrix multiplications, it is typically harder to make errors, because R will not perform the calculation if the dimensions don't line up right.
-
-When you are dealing with a matrix and a scalar, it is also harder to make errors, because there are not dimensions to worry about with the scalar.
-
-However, when you are dealing with a matrix and a vector, sometimes you can do the wrong thing and get no errors.
-
-For example, let's look at the **wrong way** to do Step 2:
-
-
-2. Multiply every row of M elementwise by x. 
-
-```{r}
-M_wrong <- M*x
-dim(M)
-dim(M_wrong)
-```
-
-What happened?  Well, R's default when given ordinary multiplication (`*`) on a matrix and a vector is to start multiplying down the **columns** of the matrix, not the rows.  This is because we consider all vectors, by default, to be **column vectors**.  
-
-Here is a simpler example:
-
-```{r}
-Mat <- rbind(
-  c(1,2),
-  c(3,4)
-)
-
-vec <- c(1, 100)
-
-Mat * vec
-```
-
-One solution to this problem (there are many ways to approach it!) is to be creative with transposing your matrix:
-
-```{r}
-new_mat <- t(Mat)*vec
-new_mat
-new_mat <- t(new_mat)
-new_mat
-```
-
-### Hint 3
-
-This process of unveiling a photo will only work if you do each step, in order, exactly once.  If you start to get thrown off, simply re-load the matrix `M` by re-running the code, and run each step again.
 
 ## Your turn
 
@@ -113,27 +48,71 @@ Perform the following steps (we have already shown  1 and 2) to discover the sec
 
 1. Matrix-multiply M by A.
 
+```{r}
+M <- M %*% A
+
+```
 
 2. Multiply every row of M elementwise by x. 
+```{r}
 
+M <- t(M) * x
+M <- t(M)
+```
 
 3. Make a diagonal matrix called Y whose diagonal values are the elements of the vector y.  Matrix-multiply the inverse of Y by M.
 
+```{r}
+Y <- diag(x = y)
+InverseY <- solve(Y)
+
+M <- Y %*% M
+```
 
 4.  Calculate the determinant of B.  Add this scalar to every element of M.
+```{r}
+detB <- det(B)
 
+M <- M + detB
+```
 
 5. Use `eigen()` to find the eigenvalues and eigenvectors of B.  Find the sum of the third eigenvector of B. Multiply every element of M by this scalar.
 
+```{r}
+eigensB <- eigen(B)
+
+sumeb <- sum(eigensB$vectors[,3])
+
+M <- M * sumeb
+```
+
 
 6. Multiply each element of M by the corresponding element of the matrix formed by (xy')'.
+```{r}
+xy <- outer(x, y)
+xy_transposed <- t(xy)
 
+M <- M * xy_transposed
+```
 
 7. Find the singular value decomposition H = UDV' using `svd()`.  Multiply each element of M by each element of 100*U. 
 
+```{r}
+svd_result <- svd(H)
+
+U <- svd_result$u
+
+M <- M * (100 * U)
+```
 
 8. Calculate the sum of the singular values of H.  Divide *every* element of M by this scalar.
 
+```{r}
+sumH <- sum(svd_result$d)
+
+M <- M / sumH
+
+```
 
 ## The results
 
